--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
-    android:background="@drawable/punchclockbg1"
-    tools:context=".MainActivity"
+    tools:context="Activities.MainActivity"
     android:orientation="vertical">
 
     <android.support.design.widget.TabLayout
