--- a/app/src/main/res/layout/category_card_view.xml
+++ b/app/src/main/res/layout/category_card_view.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/CardView.Light"
     android:layout_width="match_parent"
     android:layout_height="250dp"
-    android:layout_marginTop="8dp"
     android:layout_marginStart="8dp"
+    android:layout_marginTop="8dp"
     android:layout_marginEnd="8dp"
-    tools:ignore="ContentDescription"
-    app:cardElevation="20dp"
+    app:cardBackgroundColor="@color/categoryCardBackground"
     app:cardCornerRadius="8dp"
-    app:cardBackgroundColor="@color/colorAccent">
+    tools:ignore="ContentDescription">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,24 +21,32 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/categoryTitleTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="Category"
-            android:textSize="30sp"
-            android:layout_marginLeft="2dp"
-            app:layout_constraintLeft_toLeftOf="parent" />
+            <TextView
+                android:id="@+id/categoryTitleTextView"
+                android:background="@color/primary_text_light"
 
-        <TextView
-            android:id="@+id/totalTimeTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="00d00h00m"
-            android:textSize="22sp"
-            android:layout_marginLeft="2dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/categoryTitleTextView"/>
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginTop="2dp"
+                android:text="Category"
+                android:textSize="30sp"
+                app:layout_constraintLeft_toLeftOf="parent" />
+
+            <TextView
+                android:id="@+id/totalTimeTextView"
+                android:background="@color/primary_text_light"
+
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginBottom="2dp"
+                android:text="00d00h00m"
+                android:textSize="22sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/categoryTitleTextView" />
         </android.support.constraint.ConstraintLayout>
     </LinearLayout>
 
