--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#c7c7c7</color>
     <color name="colorPrimary2">#065f0e</color>
+    <color name="categoryCardBackground">#88ffffff</color>
     <color name="primary_text_light">#c8c8c8</color>
 
 </resources>
