Messed around with testing

--- a/app/src/main/res/layout/category_card_view.xml
+++ b/app/src/main/res/layout/category_card_view.xml
@@ -48,6 +48,17 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/categoryTitleTextView" />
         </android.support.constraint.ConstraintLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/categoryCardInnerRecyclerView"
+            android:background="@color/primary_text_light"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="2dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:listitem="@layout/time_entry_row"/>
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
