--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,6 +8,15 @@
     tools:context="Activities.MainActivity"
     android:orientation="vertical">
 
+    <EditText
+        android:id="@+id/testView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="MONEY"
+        android:textSize="50sp"
+        android:gravity="center"
+        android:background="@color/design_default_color_primary_dark"/>
+
     <android.support.design.widget.TabLayout
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
